manifests/apps/iso-cache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iso-cache-app
  namespace: iso-cache-app
spec:
  selector:
    app: iso-cache-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
